	  the check for _use_keypad in configure.ac have both been
	  removed. (DLR)
	- The -d/--rebinddelete command line/rcfile option, equivalent
	  to Pico's -d, has been added.  It is intended to work around
	  the problem with Backspace/Delete confusion on some terminals,
	  notably FreeBSD; if your Backspace key acts like Delete, this
	  option will fix that. (DLR)
- files.c:
  do_browser():
	- Some of the Pico compatibility options in the file browser
	  that don't work properly for Pico 4.6 have been removed. 
	  Backspace, 'g', 'l', 'q', and 'u' are invalid, 'd' deletes the
	  highlighted file, and 'r' renames the highlighted file. (DLR)
- nano.h:
	- Define KEY_SUSPEND as -1 when slang is used, as slang has no
	  KEY_SUSPEND equivalent.  When nano is compiled with slang
	  support, pressing Ctrl-Z to suspend nano at the Linux console
	  with keypad(TRUE) generates Ctrl-Z instead of KEY_SUSPEND
	  (which is what ncurses generates then). (DLR)
- AUTHORS
	- Updated to show 1.2/1.3 maintainers.

- 1.3 tree forks here

GNU nano 1.2.2 - 2003.08.11
- General:
	- Translation updates (see po/ChangeLog for details).
	- Change uncast nrealloc()s assigned to char pointers/arrays to
	  charealloc()s, and cast all other nrealloc()s and all
	  nmalloc()s. (David Benbennick and DLR)
	- Remove gettext marks from all debug messages. Good for developers,
	  better for translators. (Jordi)
	- Add translator comments on strings that should be short, like in
	  status bar strings, etc. (Jordi)
- utils.c:
  align()
	- Tweak to avoid a potential problem when strp is non-NULL but
	  *strp is NULL. (David Benbennick)
  nstricmp(), nstrnicmp()
	- Add these functions, equivalent to strcasecmp() and
	  strncasecmp(), and convert nano to use them when strcasecmp()
	  and/or strncasecmp() are unavailable. (DLR)
- winio.c:
  do_help()
	- Get rid of keypad_on() call for bottomwin, which should not be
	  needed (DLR).
  nanogetstr()
	- Fix problem with search history where a temporary string